# deferred-renderer

./: CMakeLists.txt  README.md  build.py  main.cpp
include/: Camera.h  InputHandler.h  Mesh.h  Model.h  Object.h  Scene.h  Shader.h  Text.h  Window.h
include/glad/: glad.h
resources/objects/Chalice/: Stone_Chalic_OBJ.mtl
shaders/: compute.glsl  fbo_debug.fs  fbo_debug.vs  forward_render.fs  forward_render.vs  g_buffer.fs  light_buffer.fs  light_cube.fs
src/: Camera.cpp  InputHandler.cpp  Mesh.cpp  Model.cpp  Object.cpp  Scene.cpp  Shader.cpp  Text.cpp  Window.cpp  glad.cpp
test/src/: test.cpp
